fix: Success card white space issue being sorted

--- a/src/Components/successStoryCard/SuccessCardStory.module.scss
+++ b/src/Components/successStoryCard/SuccessCardStory.module.scss
@@ -6,6 +6,7 @@
     flex-direction: column;
     gap: 1rem;
     flex: 2;
+    justify-content: space-between;
 }
 .success_person_wrapper{
     display: flex;
